# project-dashboard

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/api/: auth.py  dependencies.py  documents.py  projects.py  schemas.py  users.py
app/api/routers/: auth.py  documents.py  projects.py
app/core/: config.py  enums.py  security.py  storage.py
app/db/: database.py  models.py
app/models/: models.py
app/repositories/: document_repository.py  participant_repository.py  project_repository.py  role_repository.py  user_repository.py
app/routers/: auth.py  projects.py  users.py
app/schemas/: schemas.py
app/services/: auth_service.py  document_service.py  project_service.py  role_service.py  storage.py
tests/: conftest.py  test_auth.py  test_documents.py  test_projects.py
tests/integration/: conftest.py  test_auth.py  test_documents.py  test_projects.py  test_storage.py
tests/unit/: test_auth.py  test_dependencies.py  test_document.py  test_project.py  test_roles.py
