[project]
name = "project-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.137.2",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "boto3>=1.43.36",
    "pydantic-settings>=2.14.2",
]
